--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -13,7 +13,7 @@
     <script src="js/bootstrap/bootstrap.js"> </script>
     <script src="js/bootstrap/moment.js"> </script>
     <script src="js/bootstrap/moment-zh-cn.js"> </script>
-    <script src="js/bootstrap/bootstrap-datetimepicker.min.js"> </script>
+    <script src="js/bootstrap/bootstrap-datetimepicker.js"> </script>
     <script src="js/common/common.js"> </script>
     <script src="js/common/commonValidation.js"> </script>
     <script src="js/login/login.js"> </script>
