添加layer   完善删除功能 添加前台js方法     添加后台 首页Action  修复相册BUG

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
 	<link href="bootstrap-wysiwyg/google-code-prettify/prettify.css" type="text/css" rel="stylesheet" media="all">
 	<!--<link href="bootstrap-wysiwyg/bootstrap-combined.no-icons.min.css" type="text/css" rel="stylesheet">-->
 	<link href="css/common.css" type="text/css" rel="stylesheet" media="all">
+	<link href="layer/theme/default/layer.css" type="text/css" rel="stylesheet" media="all">
 	<!--<link href="bootstrap-wysiwyg/bootstrap-responsive.min.css" type="text/css" rel="stylesheet" media="all">-->
 
 	<script src="js/jquery.2.1.1.min.js"></script>
@@ -32,6 +33,7 @@
 	<script src="js/common/common.js"> </script>
 	<script src="js/common/commonValidation.js"> </script>
 	<script src="js/html2canvas.min.js"> </script>
+	<script src="layer/layer.js"> </script>
 	<script src="js/index.js"> </script>
 </head>
 <body width="1366px">
@@ -60,7 +62,7 @@
 							  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img id="head_image_show" src="images/headImage/headImage.jpg" style="width:20px;height:20px;" alt=""/>Batman</a>
 							  <ul class="dropdown-menu">
 								<li><a href="#" onclick="openSettingPart()">个人设置</a></li>
-								<li><a href="#">注销</a></li>
+								<li><a href="#" onclick="loginOut()">注销</a></li>
 							  </ul>
 						  </li>
 					  </ul>
