--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -33,30 +33,30 @@
     <div id="login_form"class="form-signin">
         <h2 class="form-signin-heading">请登录</h2>
         <label class="sr-only">账号</label>
-        <input type="text" name="account" class="form-control" placeholder="账号" required autofocus>
+        <input type="text" name="account" class="form-control margin-btm-10" placeholder="账号" required autofocus>
         <label class="sr-only">密码</label>
-        <input type="password" name="password" class="form-control" placeholder="密码" required>
-        <button class="btn btn-lg btn-primary btn-block" onclick="loginUser('login_form')">登录</button>
+        <input type="password" name="password" class="form-control margin-btm-10" placeholder="密码" required>
+        <button class="btn btn-lg btn-primary btn-block margin-btm-10" onclick="loginUser('login_form')">登录</button>
         <a href="javascript:;" class="pull-right" onclick="changeForm('login_form','register_form')">注册</a>
     </div>
 
     <div id="register_form" class="form-signin" hidden>
         <h2 class="form-signin-heading">注册用户</h2>
         <label class="sr-only">账号</label>
-        <input type="text" name="account" class="form-control" placeholder="账号" required autofocus>
+        <input type="text" name="account" class="form-control margin-btm-10" placeholder="账号" required autofocus>
         <label class="sr-only">昵称</label>
-        <input type="text" name="nickName" class="form-control" placeholder="昵称" required autofocus>
+        <input type="text" name="nickName" class="form-control margin-btm-10" placeholder="昵称" required autofocus>
         <label class="sr-only">密码</label>
-        <input type="password" name="password" class="form-control" placeholder="密码" required>
+        <input type="password" name="password" class="form-control margin-btm-10" placeholder="密码" required>
         <label class="sr-only">密码</label>
-        <input type="password" name="rePassword" class="form-control" placeholder="重复密码" required>
+        <input type="password" name="rePassword" class="form-control margin-btm-10" placeholder="重复密码" required>
         <div class='input-group date margin-bottom-10' id='register_birthday'>
             <input type='text' name="birthday" class="form-control " placeholder="输入生日"  />
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-calendar"></span>
                 </span>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" onclick="registerUser('register_form')">注册</button>
+        <button class="btn btn-lg btn-primary btn-block margin-btm-10" onclick="registerUser('register_form')">注册</button>
         <a href="javascript:;" class="pull-right" onclick="changeForm('register_form','login_form')">登录</a>
     </div>
 
