--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -10,6 +10,7 @@
 
     <script src="js/jquery.2.1.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap/bootstrap-3.1.1.min.js"></script>
+    <script src="layer/layer.js"> </script>
     <script src="js/bootstrap/bootstrap.js"> </script>
     <script src="js/bootstrap/moment.js"> </script>
     <script src="js/bootstrap/moment-zh-cn.js"> </script>
